--- a/app/views/keys/_form.html.erb
+++ b/app/views/keys/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@key) do |f| %>
+<%= form_for(@key, remote: true) do |f| %>
   <% if @key.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@key.errors.count, "error") %> prohibited this key from being saved:</h2>
@@ -11,27 +11,35 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :Company %><br>
-    <%= f.text_field :Company %>
-  </div>
-  <div class="field">
+<div class="panel callout radius">
+  <div>
+    <%= f.label :Company %>
+       <%#= f.text_field :Company%>
+      <%= f.select(:Company, grouped_options_for_select(@grouped_options), prompt: 'Choose Company', id:"scomp") %>
+     </div>
+  <div>
     <%= f.label :Description %><br>
     <%= f.text_area :Description %>
   </div>
-  <div class="field">
+  <div>
     <%= f.label :Number %><br>
     <%= f.number_field :Number %>
   </div>
-  <div class="field">
+  <div>
     <%= f.label :Checkout %><br>
     <%= f.date_select :Checkout %>
   </div>
-  <div class="field">
+  <div>
     <%= f.label :Checkin %><br>
     <%= f.date_select :Checkin %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+</div>
+ <div class="row">
+    <div class="small-6 columns">
+      <%= f.submit(class: 'button tiny radius') %>
+    </div>
+    <div class="small-6 columns">
+      <%= link_to("Cancel", "#", id: "bCancel", class: "button tiny radius") %>
+    </div>       
   </div>
 <% end %>
